# titanlib

./: SMHI-titan-lib.spec  build_rpm.sh
extras/SWIG/: CMakeLists.txt
extras/python/: CMakeLists.txt
include/: titanlib.h
src/: util.cpp
